--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
     url = https://github.com/anantkaushik/leetcode.git
     fetch = +refs/heads/*:refs/remotes/origin/*
 [remote "github"]
-    url = git@github.com:huangyingw/leetcode.git
+    url = git@github.com:huangyingw/anantkaushik_leetcode.git
     fetch = +refs/heads/*:refs/remotes/github/*
 [push]
     remote = github
